# HtmlTaskGeneratorBMSTU

./: CMakeLists.txt  README.md
resources/: TaskTemplate.html  resources.qrc
src/: main.cpp
src/core/: GenSettings.h  TaskInfo.h  TaskManager.cpp  TaskManager.h
src/gui/: CreateTasksWid.cpp  CreateTasksWid.h
